--- a/2024/DayFive/.vscode/launch.json
+++ b/2024/DayFive/.vscode/launch.json
@@ -9,8 +9,8 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceFolder}/bin/Debug/net8.0/DayFour.dll",
-            "args": ["DayFourPracticeInput.txt"],
+            "program": "${workspaceFolder}/bin/Debug/net8.0/DayFive.dll",
+            "args": ["DayFivePracticeInput.txt"],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
             "console": "externalTerminal"
